# RLVRmajorproject

./: .gitignore  README.md  pyproject.toml
docs/: experiment_status.md  real_rlvr_hpc_plan.md  research_plan.md  setup_and_run_guide.md  task_suite.md
scripts/: bootstrap_metrics.py  build_rlvr_presentation.py  build_sft_dataset.py  collect_oracle_trajectories.py  evaluate_browsergym_rlvr.py  evaluate_generalization.py  generate_task_variants.py  render_rollout_debug_html.py  run_hpc_main.sh  smoke_browsergym_miniwob.py  smoke_browsergym_openended.py  smoke_browsergym_social.py  smoke_local_env.py  train_browser_grpo.py  train_browser_rloo.py  train_browsergym_rlvr.py  train_sft_policy.py
src/social_rlvr_web/: __init__.py  actions.py  browsergym_tasks.py  checkpoints.py  env.py  local_app.py  model_policy.py  observation.py  oracle_policy.py  rlvr_policy.py  rollout.py  serializer.py  tasks.py  trained_policy.py  variants.py
